logs/offboard_pkg/build.make.145.log.stderr
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:2:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:70:123: error: expected ‘;’ at end of member declaration
   70 |     Eigen::Vector3d get_ned(double theta_d, double yaw_d, double R, double length, double angle_cone, double angle_section)
      |                                                                                                                           ^
      |                                                                                                                            ;
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp: In function ‘int main(int, char**)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:33:9: error: ‘Init_angle_cone’ was not declared in this scope; did you mean ‘angle_cone’?
   33 |         Init_angle_cone(angle_cone_list, angle_cone, nVehicle);
      |         ^~~~~~~~~~~~~~~
      |         angle_cone
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:63: CMakeFiles/offboard_pkg_node.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:70:123: error: expected ‘;’ at end of member declaration
   70 |     Eigen::Vector3d get_ned(double theta_d, double yaw_d, double R, double length, double angle_cone, double angle_section)
      |                                                                                                                           ^
      |                                                                                                                            ;
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
